--- a/canal_hdfs/pom.xml
+++ b/canal_hdfs/pom.xml
@@ -40,5 +40,20 @@
             <artifactId>avro</artifactId>
             <version>1.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-core</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.orc</groupId>
+            <artifactId>orc-core</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 </project>
